[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "power-outage-bot"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-telegram-bot==20.7",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==5.0.0",
    "python-dotenv==1.0.0"
]

[tool.python-telegram-bot]
python-telegram-bot = "20.7"
